SCGEEK-94 Fix exception page template

--- a/web-api/website/www.website/src/main/webapp/views/exception.html
+++ b/web-api/website/www.website/src/main/webapp/views/exception.html
@@ -1,90 +1,87 @@
+
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>SC2geeks.com - the best place to find and download Starcraft II replays.</title>
-	<meta name="keywords"
-	      content="SC2Geek.com - best place to find and download Starcraft 2 replays, Starcraft II, replay, search, download, Blizzard, Terran, Protoss, Zerg.">
-	<meta name="description"
-	      content="SC2Geek.com - best place to find and download Starcraft 2 replays. It takes a geek to be pro.">
-	<link rel="shortcut icon" href="http://im.sc2geeks.com/theme/geek2011/img/favicon.ico"/>
-	<link href="http://im.sc2geeks.com/theme/geek2011/css/base.v20120325.css" rel="stylesheet" type="text/css"/>
-	<link href="http://im.sc2geeks.com/theme/geek2011/css/jquery.ui.v20120328.css" rel="stylesheet" type="text/css"/>
-	<script src="http://im.sc2geeks.com/js/modernizr-2.5.3.min.js"></script>
-</head>
-<body>
+	<title>SC2Geeks.com: the best place to find and download Starcraft II replays.</title>
+	<meta name="keywords" content="SC2Geeks.com: best place to find and download Starcraft 2 replays, Starcraft II, replay, search, download, Blizzard, Terran, Protoss, Zerg.">
+	<meta name="description" content="SC2Geeks.com: best place to find and download Starcraft 2 replays. It takes a geek to be pro.">
+	<link rel="shortcut icon" href="http://cdn.sc2geeks.com/theme/geek2011/img/sc2geeks.ico" />
+	<link rel="canonical" href="http://www.sc2geeks.com/replay/nav/index.html">
+	<link href="http://cdn.sc2geeks.com/theme/geek2011/css/base.v20150106.css" rel="stylesheet" type="text/css" />
+	<link href="http://cdn.sc2geeks.com/theme/geek2011/css/jquery.ui.v20141105.css" rel="stylesheet" type="text/css" />
+	<script src="http://cdn.sc2geeks.com/js/modernizr-2.5.3.min.js"></script>
+	<script>
+		var pageContext={
+			tab:'Replay'
+		};
+	</script>
+
+</head><body>
 <div id="topContainer">
 <div id="wrap_shadow" class="wrap_style">
 <!--[if lt IE 8]><p class="chromeframe">Hi Grandpa, your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade
 	to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome
 	Frame</a> to experience this site.</p><![endif]-->
-<div id="pageContainer">
-<header>
-	<div id="headerContainer">
-		<div id="leftHeader">
-			<div id="logoContainer">
-				<a href="http://www.sc2geeks.com/replay/index.html">
-					<img src="http://im.sc2geeks.com/theme/geek2011/img/logo.png" alt="SC2Geek" title="SC2Geek"/></a>
+	<div id="pageContainer">
+		<header>
+			<div id="headerContainer">
+				<div id="leftHeader">
+					<div id="logoContainer">
+						<a href="http://www.sc2geeks.com/replay/index.html">
+							<img src="http://cdn.sc2geeks.com/theme/geek2011/img/logo_beta.png" alt="SC2Geek" title="SC2Geek"/></a>
+					</div>
+					<!-- <div id="midImageContainer"><img src="Theme/geek2011/img/midLogo.png" alt="SC2Geek" title="SC2Geek" /></div>-->
+				</div>
 			</div>
-			<!-- <div id="midImageContainer"><img src="Theme/geek2011/img/midLogo.png" alt="SC2Geek" title="SC2Geek" /></div>-->
+		</header>
+		<div id="bodyContainer" role="body">
+		Oops, something is wrong and we are looking into it. Will be back soon!
+
 		</div>
+
+		<footer>
+			<div id="footerContainer" class="sc2font">
+				&copy; SC2Geeks.com | Powered by <a href="https://github.com/GraylinKim/sc2reader">sc2reader</a> | <a href="https://github.com/RobertTheNerd/sc2geeks">Fork on Github</a>
+			</div>
+		</footer>
 	</div>
-</header>
-<div id="bodyContainer" role="body">
-Oops, something is wrong and we are looking into it. Will be back soon!
-
-</div>
-
-<footer>
-	<div id="footerContainer" class="sc2font">
-		Copyright &copy; SC2Geeks.com. All rights reserved.
-	</div>
-</footer>
 </div>
 </div>
-</div>
-
-<script>
-	var _gaq = [
-		['_setAccount', 'UA-XXXXX-X'],
-		['_trackPageview']
-	];
-	(function (d, t)
-	{
-		var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-		g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
-		s.parentNode.insertBefore(g, s)
-	}(document, 'script'));
+<script type="text/javascript">
+	var uvOptions = {};
+	(function() {
+		var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+		uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/q4DOLzWSrKVPSrjtOJUWRw.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+	})();
 </script>
+<script type="text/javascript">
 
-<script>
-	$(window).load(function ()
-	{
-		<!-- facebook like button -->
-		(function (d, s, id)
-		{
-			var js, fjs = d.getElementsByTagName(s)[0];
-			if (d.getElementById(id)) return;
-			js = d.createElement(s);
-			js.id = id;
-			js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-			fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-31727125-1']);
+	_gaq.push(['_trackPageview']);
 
-		<!-- google plus one  -->
-		(function ()
-		{
-			var po = document.createElement('script');
-			po.type = 'text/javascript';
-			po.async = true;
-			po.src = 'https://apis.google.com/js/plusone.js';
-			var s = document.getElementsByTagName('script')[0];
-			s.parentNode.insertBefore(po, s);
-			$("div.fb-like").show();
-		})();
-	});
+	(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
+
 </script>
-
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+	var sc_project=7944680;
+	var sc_invisible=1;
+	var sc_security="70dd1e0e";
+</script>
+<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="tumblr counter"
+									  href="http://statcounter.com/tumblr/" target="_blank"><img
+		class="statcounter"
+		src="http://c.statcounter.com/7944680/0/70dd1e0e/1/"
+		alt="tumblr counter"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 </body>
 </html>
